@@ -11,7 +11,7 @@ import com.intellij.notification.{Notification, NotificationListener, Notificati
 import com.intellij.openapi.application.ApplicationManager
 import com.intellij.openapi.diagnostic.Logger
 import com.intellij.openapi.project.Project
-import com.intellij.openapi.projectRoots.{ProjectJdkTable, Sdk}
+import com.intellij.openapi.projectRoots.{JavaSdkVersion, ProjectJdkTable, Sdk}
 import com.intellij.openapi.roots.ModuleRootManager
 import com.intellij.openapi.roots.impl.OrderEntryUtil
 import com.intellij.openapi.roots.ui.configuration.ProjectSettingsService
@@ -171,6 +171,12 @@ object CompileServerLauncher {
           (buildProcessParameters ++ extraJvmParameters).to(ArraySeq)
         }
 
+        // SCL-18193
+        val addOpensOptions = if (jdk.version.exists(_ isAtLeast JavaSdkVersion.JDK_11))
+          Seq("--add-opens", "java.base/java.util=ALL-UNNAMED")
+        else
+          Seq.empty
+
         val commands =
           jdk.executable.canonicalPath +:
             "-cp" +: nailgunClasspath +:
@@ -178,6 +184,7 @@ object CompileServerLauncher {
             shutdownDelayArg ++:
             isScalaCompileServer +:
             parallelCompilation +:
+            addOpensOptions ++:
             vmOptions ++:
             NailgunRunnerFQN +:
             freePort.toString +:
